# feodorov-cg-cw

src/: CMakeLists.txt  mainwindow.cc  moc_mainwindow.cpp
src/include/: mainwindow.h
src/ui/build-ui-Desktop-Debug/: Makefile  moc_mainwindow.cpp  ui  ui_mainwindow.h
